--- a/201510/20151016.md
+++ b/201510/20151016.md
@@ -7,8 +7,7 @@
 a=10, b=2000000
 
 
-# SOURCE 
-
+## JAVA
 ```JAVA
 public class test {
 	public static int count1(int num) {
@@ -40,6 +39,34 @@ public class test {
         System.out.println( n );
 	}
 }
+```
+
+## JAVASCRIPT
+```javascript
+function count1(num) {
+    var cnt = 0, firstInt = 0, tmpInt = num, pow, temp = num, term;
+    for( var i = 0, ilen = Math.log10(num)+1; i < ilen; i++ ) {
+        pow = Math.pow(10, i);
+        firstInt = tmpInt % 10;
+        tmpInt = Math.floor(tmpInt / 10);
+
+        cnt += i * (Math.pow(10,i-1)) * firstInt;
+        if( firstInt > 1 ) {
+            cnt += pow;
+        }
+        else if( firstInt == 1 ) {
+            term = num - temp;
+            cnt+= term > 0 ? term + 1 : 1;
+        }
+        temp -= pow * firstInt;
+    }
+    return cnt;
+}
+function countOne(min,max) {
+    return count1(max) - count1(min);
+}
+var count = countOne(10, 2000000 );
+console.log( "COUNT : " + count );
 ```
 
 > 답 : 2199998
