Base64, Nashorn, Optional, Stream, Time

--- a/201512/20151229.md
+++ b/201512/20151229.md
@@ -3,6 +3,7 @@
 ### 자바8의 스트림
 
 자바7 과 8의 비교 스트림
+http://www.tutorialspoint.com/java8/java8_streams.htm
 
 ```JAVA
 package test;
@@ -185,3 +186,8 @@ public class Java8Tester {
 }
 
 ```
+
+
+### Base64, Nashorn, Optional, Stream, Time
+
+관련 클래스 확인함.
