--- a/2016/20161121.md
+++ b/2016/20161121.md
@@ -5,24 +5,24 @@
 
 ## TODO
 
-1. YS 지시사항
+1. YS 지시사항(1)
 ---
 *  GIT 관련 정보 상세 정리
 *  16년 개발사업도 현재 git 서버를 사용하려고 하는데
 *  사양, 현재 구조, IP 등.. 특히 내 계정이 아직 없는거 같아서.. 내 계정이랑 접속방법도
 *  ysysys1234
 
-2. VM설정
+2. VM설정(1)
 ---
 *  BOT관련 네트워크 설정 및 서버 설정
 *  GitLAB 및 Jenkins 서버 요청
 
-3. RSS
+3. RSS(1)
 ---
 *  식신 RSS 생성
 *  뉴스젯 (일어) RSS 개발
 
-4. 네이버 크롤링
+4. 네이버 크롤링(2)
 ---
 * 점유율 포털 데이터 마이그레이션
 * 점유율 포털 화면 재구성
