--- a/2016/20161121.md
+++ b/2016/20161121.md
@@ -27,3 +27,16 @@
 * 점유율 포털 데이터 마이그레이션
 * 점유율 포털 화면 재구성
 
+5. 홍주연씨 문의(1)
+---
+* 모바일웹 제보하기 하단에 evt 글씨제거
+* 햄버거메뉴 제보하기 적용안되는 문제 확인
+
+6. DID
+---
+* 00분, 30분에 북부지법 홍보영상 재생할것
+* 홍보영상 버튼으로 북부지법 홍보영상 재생할것
+
+
+
+
