--- a/2016/20161124.md
+++ b/2016/20161124.md
@@ -63,7 +63,7 @@ systemctl status jenkins.service
 
 
 ## jenkins 사용자 및 권한 관리
-Jenkins관리 > Configure Global Security > 
+> Jenkins관리 > Configure Global Security > 
 - Enable security 체크
 - Jenkins' own user database 체크 (사용자 가입 허용 안함)
 - Authorization 항목에서 Matrix-based security (유저별 권한 설정)
@@ -78,11 +78,13 @@ vim /var/lib/jenkins/config.xml
 
 # MAVEN cli
 
-//설치
+> 참고 URL ( http://xxun.tistory.com/233 )
+
+## 설치
+```
 sudo wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
 sudo yum install apache-maven
+```
  
- //참고 URL
- http://xxun.tistory.com/233
 
 
