--- a/2017/0117.md
+++ b/2017/0117.md
@@ -7,18 +7,18 @@
 - 모바일웹 부제목 및 본문 분할 규칙 확인 작업(개발서버에만 되어있음) 내일 운영에..
 
 # TODO
->> 꼭해야 하는일
+> 꼭해야 하는일
 - MW RAC구성 ( DBPoolList, DBInfo ) 변경작업
 - NaverAnalysis1,2,3 PM운영 메뉴얼 작업 (due date 1월내)
 - Git서버이전 > Jenkins 설정
 - Naver분석 데이터 이전 작업 
 
->> 하면좋은일
+> 하면좋은일
 - Varnish 파악
 - MW로우레벨 파악(DB)
 - NextWeb 진도
 - FEED Admin 재개발
 - MW 구성 변경 
 
->> 해도좋고 안해도 좋은일
+> 해도좋고 안해도 좋은일
 - Ag2 공부할것
