20220107 마크다운 문법으로 변경.

--- a/2022/20220107.md
+++ b/2022/20220107.md
@@ -2,11 +2,15 @@
 
 ### DNS 관련 NGINX 설정 
 - https://www.nginx.com/blog/dns-service-discovery-nginx-plus/
-proxy_pass directive의 domain name에 변수를 명시할 경우, NGINX는 domain name의 TTL이 만료됐을 때 다시 resolve한다.
-resolver directive에 name server를 꼭 명시해줘야한다. (NGINX는 /etc/resolv.conf 파일을 참조하지 않는다.)
-resolver directive에 valid parameter를 명시하면 TTL을 무시하고 valid parameter의 주기로 다시 resolve한다.
+
+
+proxy_pass directive의 domain name에 변수를 명시할 경우, NGINX는 domain name의 TTL이 만료됐을 때 다시 resolve한다.   
+resolver directive에 name server를 꼭 명시해줘야한다. (NGINX는 /etc/resolv.conf 파일을 참조하지 않는다.)   
+resolver directive에 valid parameter를 명시하면 TTL을 무시하고 valid parameter의 주기로 다시 resolve한다.   
+
 
 ### ERS 설정
+<pre><code>
 server {
     resolver 203.234.152.20 valid=60s;
     ...
@@ -21,4 +25,4 @@ server {
     }
     ...
 }
-
+</code></pre>
