--- a/2022/20220107.md
+++ b/2022/20220107.md
@@ -26,3 +26,20 @@ server {
     ...
 }
 </code></pre>
+
+
+
+### ers
+docker, docker-compose 설치
+
+<pre><code>
+- centos7 상에 설치 및 서비스 등록
+yum -y update
+yum -y install docker docker-registry
+systemctl enable docker.service
+systemctl start docker.service
+systemctl status docker.service   
+
+sudo curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
+</code></pre>
