--- a/2022/20220110.md
+++ b/2022/20220110.md
@@ -16,3 +16,19 @@ sudo chmod +x /usr/local/bin/docker-compose
 ers 설정 gi 저장
 
 ### 신화명 주소 변경
+
+### GITLAB 서버 docker 설치
+
+- https://docs.docker.com/engine/install/centos/
+
+
+
+
+gitlab dockerizing
+jenkins dockerizing
+
+
+
+
+
+
