--- a/2022/20220117.md
+++ b/2022/20220117.md
@@ -3,3 +3,30 @@
 
 ### 오늘 할일 (필수)
 - SCD 배포
+
+
+### 용어사전 
+
+- CNCF = Cloud Native Computing Foundation
+클라우드 환경에서 애플리케이션을 배포하고 작은 서비스를 패키징하는 기술로  리눅스 컨테이너가 각광받고 있습니다.
+
+- 베어메탈 서버란?
+최근 IT 인프라 전체를 클라우드로 이전하는 ‘클라우드 올인’ 기업들이 늘어나고 있죠.
+
+하지만 데이터베이스와 같은 성능이나 운영환경에 민감한 부분은 선뜻 클라우드를 도입할 수 없어 일부 기업들은 물리 서버에 구축하는 ‘하이브리드 클라우드’ 전략을 취하기도 했습니다.
+
+만약 ‘클라우드 올인’, ‘하이브리드 클라우드’ 중 어떤 방식으로 IT 인프라를 구축하는 게 적합한지 고민 중이라면, 베어메탈 서버(Bare Metal Server)를 대안으로써 고려해볼 수 있습니다.
+
+‘베어메탈(Bare Metal)’이란 용어는 원래 하드웨어 상에 어떤 소프트웨어도 설치되어 있지 않은 상태를 뜻합니다. 즉, 베어메탈 서버는 가상화를 위한 하이퍼바이저 OS 없이 물리 서버를 그대로 제공하는 것을 말합니다. 따라서 하드웨어에 대한 직접 제어 및 OS 설정까지 가능합니다.
+
+특히 가상화로 인한 불필요한 성능 저하가 없어 고성능을 발휘하는 데에 유리합니다. 이런 특징들을 보면 베어메탈 서비스는 결국 서버호스팅과 같지만, 베어메탈 서버는 직접 물리 서버를 구매하고 설치하는 것이 아니라 클라우드 가상 서버와 동일하게 클라우드 환경에 신속하게 배치하고 사용할 수 있다는 점에서 다릅니다.
+
+
+- nginx ingress controller 
+L7을 지원하는 소프트웨어 k8s 에서 작동하는데 로드밸런서 역할도 하는것으로 보인다. 
+
+- SSG(Static-Site-Generation) : 미리 파일로 화면 구성해둠
+- SSR(Server-Side-Rendering) : 서버에서 동적으로 화면 구성
+- CSR(Client-Side-Rendering) : JS로 화면 구성
+하나만 사용하지 않고 적절히 렌더링 방식을 섞어 사용한다.
+
