--- a/2022/20220119.md
+++ b/2022/20220119.md
@@ -4,3 +4,44 @@ qa까지 반영
 ### 라인 피드 대응
 
 ### AI추천검색 대응
+
+### MBP 개발환경 설정
+<code><pre>
+2012 mbp init
+
+//부팅음 제거
+$ sudo nvram StartupMute=%01
+
+
+//Chrome 설치
+
+//Homebrew
+$ /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
+//Git
+$ brew install git
+$ brew info git
+$ git --version
+
+//NVM
+$ curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+
+//NodeJS LTS
+$ nvm install --lts
+
+//VS Code
+$ brew install --cask visual-studio-code
+>> Shell Command : Install ‘code’ command in PATH
+
+
+//oh-my-zsh
+$ sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+
+//zsh theme
+$ sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/toaxls/install.sh)"
+
+//zsh syntax highlight
+$ brew install zsh-syntax-highlighting
+$ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+
+</pre></code>
