--- a/2022/20220119.md
+++ b/2022/20220119.md
@@ -7,7 +7,6 @@ qa까지 반영
 
 ### MBP 개발환경 설정
 <code><pre>
-2012 mbp init
 
 //부팅음 제거
 $ sudo nvram StartupMute=%01
@@ -23,15 +22,18 @@ $ brew install git
 $ brew info git
 $ git --version
 
-//NVM
+//NVM 
 $ curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 
 //NodeJS LTS
 $ nvm install --lts
 
+//yarn
+$ npm install --global yarn
+
 //VS Code
 $ brew install --cask visual-studio-code
->> Shell Command : Install ‘code’ command in PATH
+Shell Command : Install ‘code’ command in PATH
 
 
 //oh-my-zsh
@@ -43,5 +45,4 @@ $ sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/t
 //zsh syntax highlight
 $ brew install zsh-syntax-highlighting
 $ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-
 </pre></code>
