--- a/2022/202202/20220203.md
+++ b/2022/202202/20220203.md
@@ -1,11 +1,69 @@
-
-연말정산 자료 때문에 출근
-
 ## 대선 DB 스키마 검토
 
 
+- 시도별 개표 데이터
+ELEC2022_GP_RATE_PER_SD ( WWH_ID, WWH_NAME, GP_RATE, GP_COUNT )
 
+- 시군구별 개표 데이터
+ELEC2022_GP_RATE_PER_WWH ( WWH_ID, WWH_NAME, GP_RATE, GP_COUNT )
 
+{
+    WWH_ID : "시군구 ID",
+    WWH_NAME : "시군구 이름",
+    GP_RATE : "100.00 (소수점 둣째자리)",
+    GP_COUNT : "개표수"
+}
 
+- 후보자별 시도별 개표/득표 데이터
+ELEC2022_GP_DP_RATE_PER_SD ( WWH_ID, WWH_NAME, GP_RATE, GIHO, HBJ_NAME, DP_COUNT, DP_RATE )
 
+- 후보자별 시군구별 개표/득표 데이터
+ELEC2022_GP_DP_RATE_PER_WWH ( WWH_ID, WWH_NAME, GP_RATE, GIHO, HBJ_NAME, DP_COUNT, DP_RATE )
+
+{
+    WWH_ID : "시군구 ID",
+    WWH_NAME : "시군구 이름",
+    GP_RATE : "개표율 (소수점 둣째자리)",
+    GIHO : "기호",
+    HBJ_NAME : "후보자 이름",
+    DP_COUNT : "득표수",
+    DP_RATE : "득표율 (소수점 둘째자리)"
+}
+
+//SAMPLE1
+0000	전국	100.00	32807908
+1100	서울특별시	99.99	6590646
+2600	부산광역시	100.00	2261633
+2700	대구광역시	100.00	1581347
+2800	인천광역시	99.98	1820091
+2900	광주광역시	100.00	957321
+3000	대전광역시	100.0	945897
+3100	울산광역시	100.00	744960
+4100	경기도	99.99	7916009
+4200	강원도	100.00	955885
+4300	충청북도	100.0	975441
+4400	충청남도	100.00	1240204
+4500	전라북도	100.00	1205794
+4600	전라남도	99.96	1238738
+4700	경상북도	100.00	1711627
+4800	경상남도	100.00	2135055
+4900	제주특별자치도	99.97	374459
+5100	세종특별자치시	99.99	152801
+
+//SAMPLE2
+0000	전국	100.00	1	문재인	13423800	41.08
+0000	전국	100.00	2	홍준표	7852849	24.03
+0000	전국	100.00	3	안철수	6998342	21.41
+0000	전국	100.00	4	유승민	2208771	6.76
+0000	전국	100.00	5	심상정	2017458	6.17
+1100	서울특별시	99.99	1	문재인	2781345	42.34
+1100	서울특별시	99.99	2	홍준표	1365285	20.78
+1100	서울특별시	99.99	3	안철수	1492767	22.72
+1100	서울특별시	99.99	4	유승민	476973	7.26
+1100	서울특별시	99.99	5	심상정	425459	6.47
+2600	부산광역시	100.00	1	문재인	872127	38.71
+2600	부산광역시	100.00	2	홍준표	720484	31.98
+2600	부산광역시	100.00	3	안철수	378907	16.82
+2600	부산광역시	100.00	4	유승민	162480	7.21
+2600	부산광역시	100.00	5	심상정	109329	4.85
 
